# wmce-playlist

./: .gitignore  LICENSE  README.md  cabal.project.freeze  charts  wmce-playlist.cabal
src/: Main.hs  Spotify.hs  WMCE.hs
