cabal-version:      3.0
name:               wmce-playlist
version:            0.1.0.0
synopsis:
    Create a Spotify playlist from the WMCE monthly/annual charts

-- description:
homepage:           https://github.com/JLimperg/wmce-playlist
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jannis Limperg
maintainer:         jannis@limperg.de
copyright:          (c) 2022 Jannis Limperg
build-type:         Simple
-- extra-doc-files:
extra-source-files: README.md

executable wmce-playlist
    main-is:          Main.hs
    other-modules:    Spotify
                    , WMCE
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , aeson == 2.1.*
                    , bytestring == 0.11.*
                    , containers == 0.6.*
                    , http-conduit == 2.3.*
                    , megaparsec == 9.3.*
                    , random == 1.2.*
                    , text == 2.0.*
                    , vector == 0.13.*
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall -Werror -Wno-name-shadowing
